--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "cords": "^1.0.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.9.23",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {},
   "scripts": {
