--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.23",
+    "mongoose": "^5.9.24",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.4",
     "react-router-dom": "^5.2.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
